# jmkdata

./: LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
jmkdata/: __init__.py
jmkdata/tests/: test_jmkdata.py
