[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "jmkdata"
authors = [
    {name = "Jody Klymak", email = "jklymak@uvic.ca"},
]
description = "Data processing routines that I use frequently"
readme = "README.md"
requires-python = ">=3.7"
license = {text = "BSD-3-Clause"}
classifiers = [
    "Programming Language :: Python :: 3",
]
dependencies = [
    "numpy",
    "xarray",
    "matplotlib",
    "seawater"
]
dynamic = ["version"]

# [project.optional-dependencies]
# pdf = ["ReportLab>=1.2", "RXP"]
# rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

#[project.scripts]
#jmkdata = "jmkdata.jmkdata:gappy_interp"